[gd_scene load_steps=3 format=3 uid="uid://u45pgm5uecf7"]

[ext_resource type="Script" uid="uid://dx0ww834ilvuf" path="res://settings.gd" id="1_nkug2"]
[ext_resource type="Texture2D" uid="uid://dqxw5vlmkiihn" path="res://assets/kfpbackground.png" id="2_3ykye"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nkug2")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_3ykye")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 40.0
offset_right = 50.0
offset_bottom = 63.0
grow_horizontal = 2
text = "Settings"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -20.0
offset_right = 62.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.435294, 0.270588, 0.219608, 1)

[node name="GoBackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.5
offset_top = -71.0
offset_right = 62.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
text = "Back to Menu"

[node name="BGMVolume" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -105.0
offset_right = 190.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
max_value = 10.0
value = 10.0
tick_count = 11
ticks_on_borders = true

[node name="Label" type="Label" parent="BGMVolume"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = -17.0
grow_horizontal = 2
text = "BGM Volume"

[node name="ColorRect" type="ColorRect" parent="BGMVolume/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -20.0
offset_right = 62.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.435294, 0.270588, 0.219608, 1)

[node name="FXVolume" type="HSlider" parent="."]
layout_mode = 1
offset_left = 450.0
offset_top = 394.0
offset_right = 830.0
offset_bottom = 429.0
max_value = 10.0
value = 10.0
tick_count = 11
ticks_on_borders = true

[node name="Label" type="Label" parent="FXVolume"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.5
offset_top = -40.0
offset_right = 80.5
offset_bottom = -17.0
grow_horizontal = 2
text = "Sound Effect Volume"

[node name="ColorRect" type="ColorRect" parent="FXVolume/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -20.0
offset_right = 93.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.435294, 0.270588, 0.219608, 1)

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="GoBackButton" to="." method="_on_go_back_button_pressed"]
[connection signal="value_changed" from="BGMVolume" to="." method="_on_bgm_volume_value_changed"]
[connection signal="value_changed" from="FXVolume" to="." method="_on_fx_volume_value_changed"]
